Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-57694

QMake generates invalid <PlatformToolSet> tag and wrong ToolsVersion attribute

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.6.3, 5.9.0 Beta 2
    • 5.7.0
    • Build tools: qmake
    • None
    • Windows, Visual Studio 2013
    • 88a02c4d6342d092edf3114420e9153c52c90294 c0061dae48f4302912b96f8c22a2ace32f7ff42a

    Description

      Qmake generates invalid VisualStudio project file.

      This is qmake output:

      <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
      <PlatformToolSet>v120</PlatformToolSet>
      ....

      instead of the correct (see lower/upper case of "s"):

      <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
      <PlatformToolset>v120</PlatformToolset>
      ....

      Also project header has invalid ToolsVersion="4.0" instead of ToolsVersion="12.0"

      <Project DefaultTargets="Build" ToolsVersion="12.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">

      These two bugs cause that it's not possible to use PVS Studio for analyzation of Qt application code.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            jbornema Joerg Bornemann
            ludek.vodicka Ludek Vodicka
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes